working game play

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,12 +144,12 @@ footer {
 }
 
 
-.message {
+#message {
   display: none;
   position: fixed;
-  top: 16%;
+  top: 19%;
   left: -2px;
-  width: 100%;
+  width: 102%;
   height: 50%;
   background-color: black;
   color: white;
@@ -158,21 +158,29 @@ footer {
 }
 
 
-.title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-size: 15em;
-}
-
-.subtitle {
-  display: block;
+#title {
+    display: block;
     text-align: center;
     width: 100%;
-      left: 0%;
-      top:  7%;
-      font-size: 33pt;
-      font-family: 'Rubik Mono One', sans-serif;
-      position: relative;
-    }
+    left: 0%;
+    top:  22%;
+    font-size: 3em;
+    font-family: 'Rubik Mono One', sans-serif;
+    position: relative;
+    font-family: 'Rubik Mono One', sans-serif;
+    font-size: 6em;
+}
+
+#subtitle {
+    display: block;
+    text-align: center;
+    width: 100%;
+    left: 0%;
+    top:  35%;
+    font-size: 3em;
+    font-family: 'Rubik Mono One', sans-serif;
+    position: relative;
+}
 
 
 
